--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
+    <title>M1-D2-Assignment</title> 
+    <link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+</body>
+    <h1>About Me</h1> 
+    <h2>Welcome to my World</h2> 
+    <p>My Name is Ifechukwu Beauty Azubuike, a student 
+    of Computer Science at the Technical University of
+    Kaiserslautern, Germany. I am a 24 years old ambitious
+    lady who is looking forward to breaking records in the
+    tech World. There is more to know about me but I'll 
+    let you find the rest out.</p>
+
+      <aside id="sidebar">
+            <a href="Me.jpeg"> 
+                <img src="./images/Me.jpeg" alt="My Picture" width="200" > 
+                </a>
+
+        <div class="container">
+            <section id="main">
+            <h2>Work Experience</h2>
+
+        <div class="container">
+            <section id="main">
+        <table>
+           <thead>
+                <tr>
+                  <h1>Dates</h1> 
+                  <h1>Experience</h1>
+                  </tr>
+           </thead>
+        </section> 
+        </div>
         
-    </head>
-    <body>
-        <title>About Me</title> 
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </body>
-        <header id="main-haeder"> 
-            <div class="container">
-                <h1>About Me</h1>
-            </div>
-        </header>
+
+        <div class="container">
+            <section id="main">
+            <h2>My Hobbies</h2>
+
+            <ul>
+                <li>Cooking</li>
+                <li>Listening to Music</li>
+                <li>Movies</li>
+                <li>Travelling</li> 
+            </ul>
+
+        <div class="container">
+            <section id="main">
+            <h2>Contact Details</h2>
+
+            <ul>
+                <li>Instagram @ifee__</li>
+                <li>Twitter @ifechukwu.azubuike@gmail.com</li>
+                <li>Facebook @Ifenna Azubuike</li>
+                <li>Phone Number: +491709910196</li>
+                <li>Email: ifechukwu.azubuike@gmail.com</li> 
+            </ul>
+
+            </aside>*/
 </html>
